--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       <nav>
         <div class="main-logo">chirpus inc. </div>
         <ul>
-          <li class = "d"><a href="#">Home</a></li>
-          <li class = "d"><a href="#">Work</a></li>
-          <li class = "d"><a href="#">About Us</a></li>
-          <li class = "d"><a href="#">Contact Us</a></li>
-          <li class= "c"> <a class="white" href="#">Hire Us</a></li>
+          <li class = "options"><a href="#">Home</a></li>
+          <li class = "options"><a href="#">Work</a></li>
+          <li class = "options"><a href="#">About Us</a></li>
+          <li class = "options"><a href="#">Contact Us</a></li>
+          <li class= "hire"><a href="#">Hire Us</a></li>
         </ul>
       </nav>
       <h1>chirpus inc.</h1>
@@ -27,6 +27,6 @@
           <div class="orange-circle"></div>
         </div>
       </div>
-      <a class="b" href="#">Scroll Down</a>
+      <a class="scroll" href="#">Scroll Down</a>
     </body>
 </html>
